--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
+.App{}
+.Voiti{
+  height: 100vh;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background: rgb(142,58,180);
+  background: linear-gradient(20deg, rgba(142,58,180,1) 0%, rgba(29,253,239,1) 30%, rgb(255, 98, 147) 100%);
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.Voiti__input{
+  background: linear-gradient(20deg, rgb(97, 56, 117) 40%, rgb(81, 156, 150) 100%, rgb(161, 68, 98) 60%);
+  text-align: center;
+  margin-bottom: 10px;
+  padding: 5px 0;
+  font-size: 22px;
+  border: 3px solid rgb(75, 222, 212);
+  color: rgb(255, 255, 254);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Voiti__Button{
+  display: flex;
+}
+.Voiti__button{
+  font-size: 22px;
+}
+.Voitibutton:hover{
+  color:rgb(74, 124, 124)
 }
