--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 .Voiti__input{
   background: linear-gradient(20deg, rgb(97, 56, 117) 40%, rgb(81, 156, 150) 100%, rgb(161, 68, 98) 60%);
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 10px;s
   padding: 5px 0;
   font-size: 22px;
   border: 3px solid rgb(75, 222, 212);
